# cpp

./: CMakeLists.txt  CMakeLists.txt.gcc  CMakeLists.txt.llvm  CMakeLists.txt.msvs  atcoder.sh  b.in  run.template  submission.template  task.template  task.template.base  task.template.case
direct/: ArraySorting.cpp  ParadePlanner.cpp  SubstringQueries.cpp  gen.cpp  gen.out  main.c  main.cpp  testlib.h  validate.cpp
lib/: algo.h  bits.h  chess.h  general.h  geometry.h  misc.h  recursive_function.h
lib/collections/: arr.h  dsu.h  fenwick.h  id.h  indexed_heap.h  interval_tree.h  md3arr.h  md4arr.h  mdarr.h  queue.h  ro_segment_tree.h  segment_tree.h  treap.h  treap_multi_set.h  treap_set.h  vector.h  vector_dsu.h
lib/geometry/: base_geometry.h  circle.h  line.h  point.h  polygon.h  segment.h
lib/graph/: dfs_order.h  distance.h  flow.h  graph.h  hl_decomposition.h  lca.h  mincost_flow.h  misc_algo.h
lib/graph/algo/: centroid_decomposition.h  dijkstra.h  dinic.h  edge_distances.h  floyd_warshall.h  mincost_flow.h  strongly_connected.h  top_sort.h
lib/graph/edges/: base_edge.h  biedge.h  biweighted_edge.h  flow_edge.h  weighted_edge.h  weighted_flow_edge.h
lib/io/: input.h  output.h
lib/numbers/: bigint.h  bigmod.h  doubles.h  fwht.h  inf_int.h  matrix.h  mod_numbers.h  modulo.h  multiplicative_function.h  number_iterator.h  numbers.h  prime_fft.h  primes.h  rational.h
lib/range/: range.h  rev_range.h
lib/string/: palindromes.h  string_algo.h  string_hash.h  string_utils.h  suffix_automaton.h
output/: a.out  interactive_runner.py  local_testing_tool.py  main.cpp  test.sh
tasks/: AnotherEnclosedRegion.cpp  AntScheduling.cpp  ArithmeticWithMorse.cpp  BancoDeProyectos.cpp  BeautifulWalk.cpp  BinaryPalindrome.cpp  BinomialFever.cpp  BirthdayStatistics.cpp  BlueUnicorn.cpp  BuildAGraph.cpp  CAT.cpp  ChessAndDice.cpp  ClassifyingPalindromes.cpp  CocoBitsAndTheCocoStrings.cpp  CoinChange.cpp  ColoringTrees.cpp  DMOPC19Contest3P0WhatIsIt.cpp  DMOPC19Contest3P1ModeFinding.cpp  DMOPC19Contest3P2GeneratingNames.cpp  DMOPC19Contest3P3Majority.cpp  DMOPC19Contest3P4SameColourLeaves.cpp  DMOPC19Contest3P5Festival.cpp  DMOPC19Contest3P6TST.cpp  DeltaFunctions.cpp  DexterPlaysWithGP.cpp  DictionaryOfDisorder.cpp  Div3Roman.cpp  ExpectedChange.cpp  FLISOnTree.cpp  FibonacciInspiration.cpp  FixedParities.cpp  GajjoAndBottle.cpp  GajjoIsBackAgain.cpp  GoodSubstrings.cpp  HiddenSquares.cpp  HowManyGreetingsAreThere.cpp  HowManyPrimesDivideTheNumber.cpp  IPL.cpp  InOrderOfSize.cpp  MateInTwo.cpp  (+40 more)
testrunner/: main.cpp
